--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha --require @babel/register ./test/*",
     "build": "webpack",
+    "upload": "webpack && ./aws-push.local.sh",
     "clean": "rm -rf dist && rm -rf node_modules/.cache/*"
   },
   "keywords": [],
@@ -14,9 +15,10 @@
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
-    "@babel/polyfill": "^7.12.1",
+    "aws-sdk": "^2.788.0",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "mocha": "^6.0.1",
